# dive_computer

./: .gitmodules  .metadata  CHANGELOG.md  LICENSE  README.md  ffigen.yaml  pubspec.yaml
.github/: dependabot.yml
.github/workflows/: dart.yml  flutter.yml
android/: CMakeLists.txt  build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/app/divenote/dive_computer_example/: MainActivity.kt
example/android/app/src/main/kotlin/com/example/dive_computer_ffi_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: bluetooth_provider.dart  main.dart
example/macos/Runner/: Info.plist
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc
ios/: dive_computer.podspec
ios/Classes/: array.c  atomics_cobalt.c  bluetooth.c  citizen_aqualand.c  citizen_aqualand_parser.c  cochran_commander.c  cochran_commander_parser.c  config.h  cressi_ady_parser.c  cressi_edy.c  cressi_goa.c  cressi_goa_parser.c  cressi_leonardo_parser.c  custom.c  deepblu_cosmiq.c  deepblu_cosmiq_parser.c  deepsix_excursion.c  deepsix_excursion_parser.c  dive_computer.c  diverite_nitekq.c  diverite_nitekq_parser.c  divesoft_freedom.c  divesoft_freedom_parser.c  divesystem_idive.c  divesystem_idive_parser.c  hdlc.c  hw_frog.c  hw_ostc.c  hw_ostc3.c  hw_ostc_parser.c  ihex.c  liquivision_lynx.c  liquivision_lynx_parser.c  mares_common.c  mares_darwin.c  mares_darwin_parser.c  mares_iconhd.c  mares_iconhd_parser.c  mares_nemo.c  mclean_extreme.c  (+44 more)
lib/: dive_computer.dart
lib/framework/: dive_computer_ffi.dart  dive_computer_ffi_bindings_generated.dart  dive_computer_interface.dart  dive_computer_isolate.dart  dive_computer_unsupported.dart
lib/framework/interfaces/: ble_interface.dart  dive_computer_interfaces.dart
lib/framework/utils/: transports_bitmask.dart  utils.dart
lib/types/: ble_object.dart  computer.dart  dc_iostream_t.dart  dive.dart
macos/: dive_computer.podspec  dive_computer_ffi.podspec
macos/Classes/: apple_defines.h  array.c  atomics_cobalt.c  atomics_cobalt_parser.c  citizen_aqualand.c  citizen_aqualand_parser.c  cochran_commander.c  cochran_commander_parser.c  config.h  cressi_ady_parser.c  cressi_edy.c  cressi_goa.c  cressi_goa_parser.c  cressi_leonardo.c  cressi_leonardo_parser.c  deepblu_cosmiq.c  deepblu_cosmiq_parser.c  deepsix_excursion.c  deepsix_excursion_parser.c  dive_computer.c  diverite_nitekq.c  diverite_nitekq_parser.c  divesoft_freedom.c  divesoft_freedom_parser.c  divesystem_idive.c  divesystem_idive_parser.c  hdlc.c  hid.c  hw_frog.c  hw_ostc.c  hw_ostc3.c  hw_ostc_parser.c  ihex.c  liquivision_lynx.c  liquivision_lynx_parser.c  mares_common.c  mares_darwin.c  mares_darwin_parser.c  mares_iconhd.c  mares_iconhd_parser.c  (+53 more)
native/include/libdivecomputer/: version.h
native/lib/macos/: libdivecomputer-arm64.0.dylib  libdivecomputer-x86_64.0.dylib  libdivecomputer.0.dylib
src/: CMakeLists.txt  dive_computer.c
src/hidapi_config/: config.h
src/libdivecomputer_config/: config.h
src/libusb_config/: config.h
windows/: CMakeLists.txt
