cmake_minimum_required(VERSION 3.10)

add_library(dive_computer SHARED
  "../src/libdivecomputer/src/context.c"
  "../src/libdivecomputer/src/device.c"
  "../src/libdivecomputer/src/iterator.c"
  "../src/libdivecomputer/src/buffer.c"
  "../src/libdivecomputer/src/descriptor.c"
  "../src/libdivecomputer/src/iostream.c"
  "../src/libdivecomputer/src/array.c"
  "../src/libdivecomputer/src/checksum.c"
  "../src/libdivecomputer/src/ringbuffer.c"
  "../src/libdivecomputer/src/rbstream.c"
  "../src/libdivecomputer/src/common.c"
  "../src/libdivecomputer/src/datetime.c"
  "../src/libdivecomputer/src/packet.c"
  "../src/libdivecomputer/src/aes.c"
  "../src/libdivecomputer/src/platform.c"
  "../src/libdivecomputer/src/ihex.c"
  "../src/libdivecomputer/src/timer.c"
  "../src/libdivecomputer/src/parser.c"

  "../src/libdivecomputer/src/atomics_cobalt.c"
  "../src/libdivecomputer/src/atomics_cobalt_parser.c"
  "../src/libdivecomputer/src/citizen_aqualand.c"
  "../src/libdivecomputer/src/citizen_aqualand_parser.c"
  "../src/libdivecomputer/src/cochran_commander.c"
  "../src/libdivecomputer/src/cochran_commander_parser.c"
  "../src/libdivecomputer/src/cressi_edy.c"
  "../src/libdivecomputer/src/cressi_edy_parser.c"
  "../src/libdivecomputer/src/cressi_goa.c"
  "../src/libdivecomputer/src/cressi_goa_parser.c"
  "../src/libdivecomputer/src/cressi_leonardo.c"
  "../src/libdivecomputer/src/cressi_leonardo_parser.c"
  "../src/libdivecomputer/src/deepblu_cosmiq.c"
  "../src/libdivecomputer/src/deepblu_cosmiq_parser.c"
  "../src/libdivecomputer/src/deepsix_excursion.c"
  "../src/libdivecomputer/src/deepsix_excursion_parser.c"
  "../src/libdivecomputer/src/diverite_nitekq.c"
  "../src/libdivecomputer/src/diverite_nitekq_parser.c"
  "../src/libdivecomputer/src/divesoft_freedom.c"
  "../src/libdivecomputer/src/divesoft_freedom_parser.c"
  "../src/libdivecomputer/src/hdlc.c"
  "../src/libdivecomputer/src/divesystem_idive.c"
  "../src/libdivecomputer/src/divesystem_idive_parser.c"
  "../src/libdivecomputer/src/hw_frog.c"
  "../src/libdivecomputer/src/hw_ostc3.c"
  "../src/libdivecomputer/src/hw_ostc.c"
  "../src/libdivecomputer/src/hw_ostc_parser.c"
  "../src/libdivecomputer/src/liquivision_lynx.c"
  "../src/libdivecomputer/src/liquivision_lynx_parser.c"
  "../src/libdivecomputer/src/mares_common.c"
  "../src/libdivecomputer/src/mares_darwin.c"
  "../src/libdivecomputer/src/mares_darwin_parser.c"
  "../src/libdivecomputer/src/mares_iconhd.c"
  "../src/libdivecomputer/src/mares_iconhd_parser.c"
  "../src/libdivecomputer/src/mares_nemo.c"
  "../src/libdivecomputer/src/mares_nemo_parser.c"
  "../src/libdivecomputer/src/mares_puck.c"
  "../src/libdivecomputer/src/mclean_extreme.c"
  "../src/libdivecomputer/src/mclean_extreme_parser.c"
  "../src/libdivecomputer/src/oceanic_common.c"
  "../src/libdivecomputer/src/oceanic_atom2.c"
  "../src/libdivecomputer/src/oceanic_atom2_parser.c"
  "../src/libdivecomputer/src/oceanic_veo250.c"
  "../src/libdivecomputer/src/oceanic_veo250_parser.c"
  "../src/libdivecomputer/src/oceanic_vtpro.c"
  "../src/libdivecomputer/src/oceanic_vtpro_parser.c"
  "../src/libdivecomputer/src/oceans_s1_common.c"
  "../src/libdivecomputer/src/oceans_s1.c"
  "../src/libdivecomputer/src/oceans_s1_parser.c"
  "../src/libdivecomputer/src/reefnet_sensus.c"
  "../src/libdivecomputer/src/reefnet_sensus_parser.c"
  "../src/libdivecomputer/src/reefnet_sensuspro.c"
  "../src/libdivecomputer/src/reefnet_sensuspro_parser.c"
  "../src/libdivecomputer/src/reefnet_sensusultra.c"
  "../src/libdivecomputer/src/reefnet_sensusultra_parser.c"
  "../src/libdivecomputer/src/seac_screen.c"
  "../src/libdivecomputer/src/seac_screen_parser.c"
  "../src/libdivecomputer/src/shearwater_common.c"
  "../src/libdivecomputer/src/shearwater_petrel.c"
  "../src/libdivecomputer/src/shearwater_predator.c"
  "../src/libdivecomputer/src/shearwater_predator_parser.c"
  "../src/libdivecomputer/src/sporasub_sp2.c"
  "../src/libdivecomputer/src/sporasub_sp2_parser.c"
  "../src/libdivecomputer/src/suunto_common.c"
  "../src/libdivecomputer/src/suunto_common2.c"
  "../src/libdivecomputer/src/suunto_d9.c"
  "../src/libdivecomputer/src/suunto_d9_parser.c"
  "../src/libdivecomputer/src/suunto_eon.c"
  "../src/libdivecomputer/src/suunto_eon_parser.c"
  "../src/libdivecomputer/src/suunto_eonsteel.c"
  "../src/libdivecomputer/src/suunto_eonsteel_parser.c"
  "../src/libdivecomputer/src/suunto_solution.c"
  "../src/libdivecomputer/src/suunto_solution_parser.c"
  "../src/libdivecomputer/src/suunto_vyper.c"
  "../src/libdivecomputer/src/suunto_vyper_parser.c"
  "../src/libdivecomputer/src/suunto_vyper2.c"
  "../src/libdivecomputer/src/tecdiving_divecomputereu.c"
  "../src/libdivecomputer/src/tecdiving_divecomputereu_parser.c"
  "../src/libdivecomputer/src/uwatec_aladin.c"
  "../src/libdivecomputer/src/uwatec_memomouse.c"
  "../src/libdivecomputer/src/uwatec_memomouse_parser.c"
  "../src/libdivecomputer/src/uwatec_smart.c"
  "../src/libdivecomputer/src/uwatec_smart_parser.c"
  "../src/libdivecomputer/src/zeagle_n2ition3.c"
)

include_directories("../src/libdivecomputer/include")
