# The Flutter tooling requires that developers have CMake 3.10 or later
# installed. You should not increase this version, as doing so will cause
# the plugin to fail to compile for some customers of the plugin.
cmake_minimum_required(VERSION 3.10)

project(dive_computer_library VERSION 0.0.1 LANGUAGES C)

add_library(dive_computer SHARED
  "libdivecomputer/src/context.c"
  "libdivecomputer/src/device.c"
  "libdivecomputer/src/iterator.c"
  "libdivecomputer/src/buffer.c"
  "libdivecomputer/src/descriptor.c"
  "libdivecomputer/src/iostream.c"
  "libdivecomputer/src/array.c"
  "libdivecomputer/src/checksum.c"
  "libdivecomputer/src/ringbuffer.c"
  "libdivecomputer/src/rbstream.c"
  "libdivecomputer/src/common.c"
  "libdivecomputer/src/datetime.c"
  "libdivecomputer/src/packet.c"
  "libdivecomputer/src/aes.c"
  "libdivecomputer/src/platform.c"
  "libdivecomputer/src/ihex.c"
  "libdivecomputer/src/timer.c"
  "libdivecomputer/src/parser.c"

  "libdivecomputer/src/atomics_cobalt.c"
  "libdivecomputer/src/atomics_cobalt_parser.c"
  "libdivecomputer/src/citizen_aqualand.c"
  "libdivecomputer/src/citizen_aqualand_parser.c"
  "libdivecomputer/src/cochran_commander.c"
  "libdivecomputer/src/cochran_commander_parser.c"
  "libdivecomputer/src/cressi_edy.c"
  "libdivecomputer/src/cressi_edy_parser.c"
  "libdivecomputer/src/cressi_goa.c"
  "libdivecomputer/src/cressi_goa_parser.c"
  "libdivecomputer/src/cressi_leonardo.c"
  "libdivecomputer/src/cressi_leonardo_parser.c"
  "libdivecomputer/src/deepblu_cosmiq.c"
  "libdivecomputer/src/deepblu_cosmiq_parser.c"
  "libdivecomputer/src/deepsix_excursion.c"
  "libdivecomputer/src/deepsix_excursion_parser.c"
  "libdivecomputer/src/diverite_nitekq.c"
  "libdivecomputer/src/diverite_nitekq_parser.c"
  "libdivecomputer/src/divesoft_freedom.c"
  "libdivecomputer/src/divesoft_freedom_parser.c"
  "libdivecomputer/src/hdlc.c"
  "libdivecomputer/src/divesystem_idive.c"
  "libdivecomputer/src/divesystem_idive_parser.c"
  "libdivecomputer/src/hw_frog.c"
  "libdivecomputer/src/hw_ostc3.c"
  "libdivecomputer/src/hw_ostc.c"
  "libdivecomputer/src/hw_ostc_parser.c"
  "libdivecomputer/src/liquivision_lynx.c"
  "libdivecomputer/src/liquivision_lynx_parser.c"
  "libdivecomputer/src/mares_common.c"
  "libdivecomputer/src/mares_darwin.c"
  "libdivecomputer/src/mares_darwin_parser.c"
  "libdivecomputer/src/mares_iconhd.c"
  "libdivecomputer/src/mares_iconhd_parser.c"
  "libdivecomputer/src/mares_nemo.c"
  "libdivecomputer/src/mares_nemo_parser.c"
  "libdivecomputer/src/mares_puck.c"
  "libdivecomputer/src/mclean_extreme.c"
  "libdivecomputer/src/mclean_extreme_parser.c"
  "libdivecomputer/src/oceanic_common.c"
  "libdivecomputer/src/oceanic_atom2.c"
  "libdivecomputer/src/oceanic_atom2_parser.c"
  "libdivecomputer/src/oceanic_veo250.c"
  "libdivecomputer/src/oceanic_veo250_parser.c"
  "libdivecomputer/src/oceanic_vtpro.c"
  "libdivecomputer/src/oceanic_vtpro_parser.c"
  "libdivecomputer/src/oceans_s1_common.c"
  "libdivecomputer/src/oceans_s1.c"
  "libdivecomputer/src/oceans_s1_parser.c"
  "libdivecomputer/src/reefnet_sensus.c"
  "libdivecomputer/src/reefnet_sensus_parser.c"
  "libdivecomputer/src/reefnet_sensuspro.c"
  "libdivecomputer/src/reefnet_sensuspro_parser.c"
  "libdivecomputer/src/reefnet_sensusultra.c"
  "libdivecomputer/src/reefnet_sensusultra_parser.c"
  "libdivecomputer/src/seac_screen.c"
  "libdivecomputer/src/seac_screen_parser.c"
  "libdivecomputer/src/shearwater_common.c"
  "libdivecomputer/src/shearwater_petrel.c"
  "libdivecomputer/src/shearwater_predator.c"
  "libdivecomputer/src/shearwater_predator_parser.c"
  "libdivecomputer/src/sporasub_sp2.c"
  "libdivecomputer/src/sporasub_sp2_parser.c"
  "libdivecomputer/src/suunto_common.c"
  "libdivecomputer/src/suunto_common2.c"
  "libdivecomputer/src/suunto_d9.c"
  "libdivecomputer/src/suunto_d9_parser.c"
  "libdivecomputer/src/suunto_eon.c"
  "libdivecomputer/src/suunto_eon_parser.c"
  "libdivecomputer/src/suunto_eonsteel.c"
  "libdivecomputer/src/suunto_eonsteel_parser.c"
  "libdivecomputer/src/suunto_solution.c"
  "libdivecomputer/src/suunto_solution_parser.c"
  "libdivecomputer/src/suunto_vyper.c"
  "libdivecomputer/src/suunto_vyper_parser.c"
  "libdivecomputer/src/suunto_vyper2.c"
  "libdivecomputer/src/tecdiving_divecomputereu.c"
  "libdivecomputer/src/tecdiving_divecomputereu_parser.c"
  "libdivecomputer/src/uwatec_aladin.c"
  "libdivecomputer/src/uwatec_memomouse.c"
  "libdivecomputer/src/uwatec_memomouse_parser.c"
  "libdivecomputer/src/uwatec_smart.c"
  "libdivecomputer/src/uwatec_smart_parser.c"
  "libdivecomputer/src/zeagle_n2ition3.c"
)

include_directories("libdivecomputer/include")

set_target_properties(dive_computer PROPERTIES
  PUBLIC_HEADER dive_computer.h
  OUTPUT_NAME "dive_computer"
)

target_compile_definitions(dive_computer PUBLIC DART_SHARED_LIB)
